<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".AddProductsActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addproductimage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageheight"
        android:src="@drawable/baseline_add_photo_alternate_24"
        android:layout_margin="@dimen/genericmargin"

        />

    <com.example.onlineshoppingapp.utils.CustomEditText
        android:id="@+id/productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:minHeight="@dimen/minheight"
        android:inputType="text"
        android:layout_margin="@dimen/genericmargin"
        />

    <com.example.onlineshoppingapp.utils.CustomEditText
        android:id="@+id/productprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/genericmargin"
        android:hint="@string/price"
        android:minHeight="@dimen/minheight"
        android:inputType="number"
        />
    <Spinner

        android:id="@+id/productcatagoryspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/border_cardview"
        android:layout_margin="@dimen/genericmargin"
        android:minHeight="@dimen/minheight"

        />

    <com.example.onlineshoppingapp.utils.CustomEditText
        android:id="@+id/productdesc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/descriptionboxsize"
        android:layout_margin="@dimen/genericmargin"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        />
    <com.example.onlineshoppingapp.utils.CustomEditText
        android:id="@+id/productstock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/genericmargin"
        android:hint="@string/stock"
        android:minHeight="@dimen/minheight"
        android:inputType="number"
        />

    <com.example.onlineshoppingapp.utils.CustomButton
        android:id="@+id/senddata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/add"
        android:layout_gravity="center"
        />

</LinearLayout>


</ScrollView>