<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_card"
        android:weightSum="5"

    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >



<ImageView
    android:id="@+id/registerimg"
    android:layout_width="@dimen/registerimagewidth"
    android:layout_height="@dimen/registerimageheight"
    android:src="@drawable/mobile_login_bro"
    android:layout_gravity="center"
    android:layout_margin="@dimen/marginfromlayout"
    />  <com.example.onlineshoppingapp.utils.CustomTv
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"

        >


        <androidx.constraintlayout.widget.ConstraintLayout

            android:background="@drawable/custom_card_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/etname"
            app:layout_constraintTop_toBottomOf="@+id/etname"

            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.example.onlineshoppingapp.utils.CustomEditText
                        android:id="@+id/etname"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edittextmargin"

                        android:hint="@string/Username"
                        android:inputType="text"
                        android:minHeight="@dimen/minheight" />

                    <com.example.onlineshoppingapp.utils.CustomEditText
                        android:id="@+id/etmail"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edittextmargin"

                        android:hint="@string/Email"
                        android:inputType="text"
                        android:minHeight="@dimen/minheight" />

                    <com.example.onlineshoppingapp.utils.CustomEditText
                        android:id="@+id/etpassword"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edittextmargin"
                        android:hint="@string/Password"
                        android:inputType="text"
                        android:minHeight="@dimen/minheight" />

                    <com.example.onlineshoppingapp.utils.CustomEditText
                        android:id="@+id/etconfirmassword"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/edittextmargin"
                        android:hint="@string/ConfirmPassword"
                        android:inputType="text"
                        android:minHeight="@dimen/minheight"
                        app:layout_constraintEnd_toEndOf="@+id/etpassword"

                        app:layout_constraintStart_toStartOf="@+id/etpassword"
                        app:layout_constraintTop_toBottomOf="@id/etpassword" />

                    <com.example.onlineshoppingapp.utils.CustomButton
                        android:id="@+id/registerbutton"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/genericmargin"
                        android:background="@drawable/custom_btn"
                        android:text="@string/Register_button" />

                    <com.example.onlineshoppingapp.utils.CustomTv
                        android:id="@+id/redirectlogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/genericmargin"

                        android:text="@string/RedirecttoLogin" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>


</LinearLayout>