<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_card"
     tools:context=".LoginActivity"
    android:weightSum="5"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageView
            android:layout_margin="@dimen/marginfromlayout"
            android:layout_width="@dimen/registerimagewidth"
            android:layout_height="@dimen/registerimageheight"
            android:src="@drawable/mobile_login_bro"
            android:layout_gravity="center"
            />

        <com.example.onlineshoppingapp.utils.CustomTv
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"

            android:layout_gravity="center"
            android:gravity="center"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_weight="4"
        >
        <androidx.constraintlayout.widget.ConstraintLayout


            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/custom_card_color"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:background="@drawable/border_cardview"
                    android:hint="@string/Email"
                    android:minHeight="@dimen/minheight"
                     />


                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:background="@drawable/border_cardview"
                    android:hint="@string/Password"
                    android:minHeight="@dimen/minheight" />


                <com.example.onlineshoppingapp.utils.CustomButton
                    android:id="@+id/loginbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/bgcolorlow"
                    android:text="@string/login_button"
                     />

                <com.example.onlineshoppingapp.utils.CustomTv

                    android:id="@+id/redirectregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/genericmargin"

                    android:text="@string/RedirecttoRegister" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>





</LinearLayout>