<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/custom_card"
    android:weightSum="3"
    android:orientation="vertical"
    tools:context=".UserProfileActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/profileimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginfromlayout"
        android:layout_gravity="center"
        android:src="@drawable/baseline_person_add_24"
        android:background="@drawable/custom_imageshape"

        />
    <com.example.onlineshoppingapp.utils.CustomTv
        android:layout_marginTop="@dimen/genericmargin"
        android:textColor="@color/white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
        android:textSize="@dimen/textsize"
        android:layout_gravity="center"

    />
</LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="2"
        android:background="@drawable/custom_card_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:hint="@string/Username"
                    android:minHeight="@dimen/minheight"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profileimage" />


                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/usermail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:hint="@string/Email"
                    android:minHeight="@dimen/minheight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintVertical_bias="0.115"
                    tools:layout_editor_absoluteX="0dp" />

                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:hint="@string/phonenumber"
                    android:minHeight="@dimen/minheight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usermail"
                    />

                <com.example.onlineshoppingapp.utils.CustomEditText
                    android:id="@+id/Gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/edittextmargin"
                    android:hint="@string/gender"
                    android:minHeight="@dimen/minheight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phonenumber"

                     />

                <com.example.onlineshoppingapp.utils.CustomButton
                    android:id="@+id/saveuserdetailsbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/bgcolormid"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Gender" />


            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>