<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/marginfromlayout"



   >

    <com.google.android.material.card.MaterialCardView



        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgcolorgrey"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/productimageeachitem"
                android:layout_width="match_parent"

                android:layout_height="@dimen/imageheight"
                android:layout_gravity="start"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"

                />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/marginfromlayout"
                android:orientation="vertical"
                android:weightSum="3">

                <com.example.onlineshoppingapp.utils.CustomTv
                    android:id="@+id/productnameeachitem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginfromlayout"
                    android:layout_weight="1"
                    android:text="@string/product_name"
                    android:textColor="@color/black" />


                <com.example.onlineshoppingapp.utils.CustomTv
                    android:id="@+id/productpriceeachitem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginfromlayout"
                    android:layout_weight="1"
                    android:text="@string/price"
                    android:textColor="@color/black" />

                <com.example.onlineshoppingapp.utils.CustomButton
                    android:id="@+id/productdelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginfromlayout"
                    android:layout_weight="1"
                    android:background="@drawable/custom_card"
                    android:gravity="center"
                    android:minHeight="@dimen/minheight"
                    android:src="@drawable/baseline_delete_24"
                    android:text="@string/delete"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>







    </com.google.android.material.card.MaterialCardView>


</LinearLayout>